--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
